more pleasant red for remove buttons

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             position: absolute;
             right: 10px;
             top: 10px;
-            background-color: #f44336;
+            background-color: #6f110a;
             color: white;
             border: none;
             padding: 5px 10px;
@@ -124,11 +124,11 @@
         }
 
         .remove-step-btn:hover {
-            background-color: #d32f2f;
+            background-color: #360505;
         }
 
         .remove-ingredient-btn {
-            background-color: #f44336;
+            background-color: #6f110a;
             color: white;
             border: none;
             padding: 5px 10px;
@@ -138,7 +138,7 @@
         }
 
         .remove-ingredient-btn:hover {
-            background-color: #d32f2f;
+            background-color: #360505;
         }
 
         .sql-output {
