--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
         function generateSQL() {
             console.log("SQL Generation gestartet"); // Debugging
             const title = document.getElementById('title').value;
+            const author = document.getElementById('author').value;
             const portions = document.getElementById('portions').value;
             const totalTime = document.getElementById('totalTime').value;
             const cookingTime = document.getElementById('cookingTime').value;
@@ -224,7 +225,7 @@
             }
 
             const sqlCommands = `
-INSERT INTO recipes (title, portions, difficulty, utensils, imageUrl, category, totalTime, cookingTime) VALUES ('${title}', ${portions}, '${difficulty}', '${utensils}', '${imageUrl}', '${categoryJSON}', ${totalTime}, ${cookingTime});
+INSERT INTO recipes (title, portions, difficulty, utensils, imageUrl, category, totalTime, cookingTime, author) VALUES ('${title}', ${portions}, '${difficulty}', '${utensils}', '${imageUrl}', '${categoryJSON}', ${totalTime}, ${cookingTime}, '${author}');
 SET @recipe_id = (SELECT id FROM recipes WHERE title='${title}');
 
 INSERT INTO ingredients (name, diet) VALUES ${ingredientInserts.join(', ')}
@@ -296,7 +297,7 @@ ${stepInserts.join(', ')};`;
 
         <div class="ingredient-fields">
             <input type="text" class="ingredient-name" placeholder="Zutat" required>
-            <input type="text" class="ingredient-amount" placeholder="Menge" required>
+            <input type="number" class="ingredient-amount" placeholder="Menge" required>
             <button type="button" class="remove-ingredient-btn">Entfernen</button>
         </div>
         <button type="button" class="add-ingredient">Zutat hinzufügen</button>
@@ -328,7 +329,7 @@ ${stepInserts.join(', ')};`;
                 ingredientFields.className = 'ingredient-fields';
                 ingredientFields.innerHTML = `
             <input type="text" class="ingredient-name" placeholder="Zutat" required>
-            <input type="text" class="ingredient-amount" placeholder="Menge" required>
+            <input type="number" class="ingredient-amount" placeholder="Menge" required>
             <button type="button" class="remove-ingredient-btn">Entfernen</button>
         `;
                 stepContainer.appendChild(ingredientFields);
@@ -358,6 +359,9 @@ ${stepInserts.join(', ')};`;
         <label for="title">Titel:</label>
         <input type="text" id="title" required>
         <div>
+            <label for="author">Autor*in:</label>
+            <input type="text" id="author" required>
+            <div>
             <label for="portions">Portionen:</label>
             <input type="number" id="portions" required>
             <div>
@@ -406,7 +410,7 @@ ${stepInserts.join(', ')};`;
 
                                 <div class="ingredient-fields">
                                     <input type="text" class="ingredient-name" placeholder="Zutat" required>
-                                    <input type="text" class="ingredient-amount" placeholder="Menge" required>
+                                    <input type="number" class="ingredient-amount" placeholder="Menge" required>
                                     <button type="button" class="remove-ingredient-btn">Entfernen</button>
                                 </div>
                                 <button type="button" class="add-ingredient">Zutat hinzufügen</button>
