--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@ ${stepInserts.join(', ')};`;
                 <label for="workingTime">Arbeitszeit (in Minuten):</label>
                 <input type="number" id="workingTime" required>
                 <br>
-                <label for="cookingTime">Kochzeit (in Minuten):</label>
+                <label for="cookingTime">Koch-/Backzeit (in Minuten):</label>
                 <input type="number" id="cookingTime" required>
                 <br>
                 <label for="restingTime">Ruhezeit (in Minuten):</label>
@@ -393,11 +393,11 @@ ${stepInserts.join(', ')};`;
 
                         <div class="checkbox-container">
                             <label><input type="checkbox" class="category-checkbox" value="Vorspeise"> Vorspeise</label>
-                            <label><input type="checkbox" class="category-checkbox" value="Hauptspeise">
-                                Hauptspeise</label>
+                            <label><input type="checkbox" class="category-checkbox" value="Hauptspeise">Hauptspeise</label>
                             <label><input type="checkbox" class="category-checkbox" value="Dessert"> Dessert</label>
                             <label><input type="checkbox" class="category-checkbox" value="Frühstück"> Frühstück</label>
                             <label><input type="checkbox" class="category-checkbox" value="Snacks"> Snacks</label>
+                            <label><input type="checkbox" class="category-checkbox" value="Gebäck"> Gebäck</label>
                             <label><input type="checkbox" class="category-checkbox" value="Getränke"> Getränke</label>
                         </div>
 
